--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ google-auth-httplib2 = "^0.0.4"
 google-auth-oauthlib = "^0.4.1"
 
 [tool.poetry.dev-dependencies]
+black = {version = "^19.10b0", allow-prereleases = true}
 
 [build-system]
 requires = ["poetry-core>=1.0.0a5"]
